--- a/src/app/global.css
+++ b/src/app/global.css
@@ -85,6 +85,7 @@ h6 {
     flex-direction: column;
     align-items: flex-start;
     row-gap: 10px;
+    width: 100vw;
     min-height: 100vh;
     padding: 24px;
 }
